# icon_capturer

./: README.md
iconcapturer/: build.gradle  settings.gradle
iconcapturer/app/: build.gradle  proguard-rules.pro
iconcapturer/app/src/main/: AndroidManifest.xml
iconcapturer/app/src/main/assets/: litepal.xml
iconcapturer/app/src/main/jni/: CMakeLists.txt
iconcapturer/app/src/main/jni/square/: CMakeLists.txt
iconcapturer/app/src/main/jni/square/include/: squares.h  utils.h
iconcapturer/app/src/main/jni/square/src/: jni_interface.cpp  squares.cpp  utils.cpp
iconcapturer/app/src/main/res/drawable/: add_btn.xml  bottom_text_selector.xml  btn_border.xml  btn_color_selector.xml  btn_filled_border.xml  camera_btn.xml  check_all_btn.xml  decheck_all_btn.xml  delete_btn.xml  divider.xml  divider_line.xml  download_btn.xml  edit_btn.xml  edit_text_border.xml  edit_text_square_border.xml  heart_btn.xml  help_btn.xml  image_border.xml  info_btn.xml  menu_btn.xml  pause_btn.xml  restore_btn.xml  send_btn.xml  share_btn.xml  sort_down_btn.xml  sort_up_btn.xml  star_btn.xml  start_btn.xml  text_selector.xml  toast_shape.xml  update_btn.xml
iconcapturer/app/src/main/res/layout/: activity_about.xml  activity_edit.xml  activity_float_item.xml  activity_log_report.xml  activity_main.xml  activity_setting.xml  dialog_checkbox.xml  edit_icon_item.xml  file_item.xml  fragment_help.xml  fragment_info.xml  help_item.xml  icon_item.xml  menu_author_view.xml  menu_checkall_view.xml  menu_decheckall_view.xml  menu_del_view.xml  menu_edit_view.xml  menu_email_view.xml  menu_like_view.xml  menu_log_view.xml  menu_save_view.xml  menu_setting_view.xml  menu_share_view.xml  menu_sort_view.xml  menu_version_view.xml  menu_view.xml  nav_header.xml  open_image_activity_viewpager.xml  toast_view.xml  update_dialog_fragment.xml
iconcapturer/app/src/main/res/layout-xhdpi/: activity_log_report.xml
iconcapturer/app/src/main/res/menu/: bottom_menu.xml  edit_bottom_menu.xml  edit_menu.xml  main.xml  nav_menu.xml  pop_menu.xml
iconcapturer/app/src/main/res/raw/: update_log.txt
iconcapturer/app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  themes.xml
iconcapturer/app/src/main/res/values-night/: themes.xml
iconcapturer/app/src/main/res/xml/: log_paths.xml
iconcapturer/gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
